syntax = "proto3";

option java_package = "com.adtiming.om.pb";
option java_outer_classname = "CommonPB";

enum Plat {
    iOS = 0;
    Android = 1;
}

enum AdType {
    Banner = 0; // 横幅
    Native = 1; // 原生
    RewardVideo = 2; // 视频
    Interstitial = 3; // 插屏
    Splash = 4; // 开屏
    CrossPromotion = 5; // 交叉推广
    RewardedInterstitial = 6; // 激励插屏
}

message Country {
    string a2 = 1;
    string a3 = 2;
    int32 tz = 3;
    int32 dcenter = 4;
}

message Dict {
    int32 id = 1;
    int32 pid = 2;
    string name = 3;
    string value = 4;
}

message Currency {
    string cur_from = 1; //原币种
    string cur_to = 2; //需要转换为的币种
    float exchange_rate = 3; //汇率
}

enum ABTest {
    None = 0;
    A = 1;
    B = 2;
}

// 区间, *_type 为 true 表式开区间, false 表示闭区间
message Range {
    string min = 1;
    string max = 2;
    bool min_type = 3; // true: open, false: close
    bool max_type = 4; // true: open, false: close
}
